modified in sylesheet

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -9,29 +9,35 @@
 }
 
 .wrapper button {
-  background-color: #614101;
+  background-color: #4e1e08;
   color: #fff;
   font-weight: bold;
   cursor: pointer;
+  border-radius: 25px;
 }
 .accordion {
   width: 500px;
 }
 .item {
-  background-color: #614101;
+  background-color: #7c5505;
   margin: 10px;
   padding: 10px 20px;
+  border-radius: 50px;
 }
 
 .title {
-  color: #fff;
+  color: #ffffff;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   cursor: pointer;
 }
 
 .content {
-  color: #fff;
+  background-color: #b4aeae;
+  color: rgb(49, 6, 15);
+  padding: 15px;
+  font-weight: bold;
+  border-radius: 25px;
   height: auto;
 }
